--- a/ui/index.html
+++ b/ui/index.html
@@ -1,29 +1,33 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <title>Codeboard Online IDE</title>
-
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous" />
     <link rel="stylesheet" href="css/style.css" />
 </head>
-<body>
 
-    <div class="header"> Codeboard Online IDE </div>
+<body style="height: 100vh;">
+
+    <div class="header"><img src="./img/eelogo.png" />Code your smart home</div>
     <div class="control-panel">
-        Select Language:
-        &nbsp; &nbsp;
-        <select id="languages" class="languages" onchange="changeLanguage()">
+        <input type="number" min="1" placeholder="input your id" />
+        <select id=" languages" class="languages" onchange="changeLanguage()" disabled>
+            <option value="python"> Python </option>
             <option value="c"> C </option>
             <option value="cpp"> C++ </option>
             <option value="php"> PHP </option>
-            <option value="python"> Python </option>
             <option value="node"> Node JS </option>
         </select>
     </div>
     <div class="editor" id="editor"></div>
 
     <div class="button-container">
-        <button class="btn" onclick="executeCode()"> Run </button>
+        <div class="spinner-border text-primary not-loading " role="status" id="loading_spinner">
+        </div>
+        <button class="btn btn-primary" id="upload_button" onclick="executeCode()"> Upload </button>
     </div>
 
     <div class="output"></div>
@@ -34,4 +38,5 @@
     <script src="js/ide.js"></script>
 
 </body>
+
 </html>
