--- a/ui/index.html
+++ b/ui/index.html
@@ -13,7 +13,7 @@
 
     <div class="header"><img src="./img/eelogo.png" />Code your smart home</div>
     <div class="control-panel">
-        <input type="number" min="1" placeholder="input your id" />
+        <input type="number" min="1" placeholder="input your id" id="id_input" />
         <select id=" languages" class="languages" onchange="changeLanguage()" disabled>
             <option value="python"> Python </option>
             <option value="c"> C </option>
